- Fixed dnsmkzone's handling of reverse zones, fixed unittest
- Fixed dnsmkview erroring out after already making view.
- Fixed dnslsview KeyError with dns server sets.
- Removed list function from dnsmkhost.
- Fixed dnsmkview erroring out for no acl existing after creating a view
- Fixed dnsmkview unittest.
- Removed -i flag in dnslshost as it is not used.
- Fixed errors in remove record in cli_record_lib.
- Changed default ttl from 5 to 3600 in dns*host.
- Made ttl an int in cli_record_lib.
- Fixed dnsrmhost not removing PTR records.
- Standardized record not found error in dnsrmhost.
- Made cli record/common lib into classes.
- All user tools use a config file.
- Roster Client Lib replaces expired infinite credential strings.
- Added a --version flag to all user tools.
- Made a roster_user_tools.conf file, made it install with setup.py.
- Added better documentation of dnsuphost output file.
- Removed ListZones from MakeHostsFile.
- Made dnsmkzone get cidr block from unreverse ip.
- Added --config-file to all user tools.
- Improved error of config file not found.

2009-09-23 release-0.5
- Made trunk install as version 0.1
- Fixed current_version variable in setups
- Fixed dnsmkzone and made unittests use a configuration file in home directory
- Made seperate "SERVER ERROR" and "CLIENT ERROR" messages
- Fixed some inports in unittests and implemented a new function in roster client lib
- Fixed dnsrmrecord integer problems
- Fixed dnsrmhost and unittest printing errors and not catching raised errors used for comparison
- Fixed spelling of raise in roster_client_lib
- Fixed dnsmkview not allowing dns server set view assignments

2009-09-14 release-0.3
- Added checking of ACLs in dnsmkview. Updated unittest.
- Added dnsmkacl and unittest.

2009-09-09 release-0.1b2
- split up dnsmkzone into different scripts to be clear
- dnsrmusergroup uses DisallowFlags
- changed RunFunction to display nicer errors

2009-8-25 Release-0.1b1
- First Release