@@ -25,6 +25,7 @@ Current Release
 - Made dnsmkzone get cidr block from unreverse ip.
 - Added --config-file to all user tools.
 - Improved error of config file not found.
+- Fixed config file missing error.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
